syntax = "proto3";

package net.devh.boot.grpc.example;
option java_multiple_files = true;
option java_outer_classname = "AuthProto";
option java_package = "com.microservice.auth_proto";

service AuthService {
  rpc doIdentity(IdentityRequest) returns (IdentityResponse);
}

message IdentityRequest {
  int32 userId = 1;
}

message IdentityResponse {
  bool active = 1;
  string roles = 2;
}